--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "flow"
   ],
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
     "bcryptjs": "2.2.0",
     "cheerio": "0.19.0",
     "clone": "1.0.2",
@@ -62,6 +63,7 @@
     "passport-github": "^1.0.0",
     "passport-google-oauth": "^0.2.0",
     "passport-http-bearer": "1.0.1",
+    "passport-local": "^1.0.0",
     "passport-oauth2-client-password": "0.1.2",
     "passport-twitter": "^1.0.3",
     "raw-body": "2.1.2",
